Sprint 6 Version 3.0.0 - Улучшена история просмотров